                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 11-09-2006 fixed: Radiobutton responded in the opposite way to the <selected> tag.
 - 11-09-2006 fixed: Made sure you could call the media windows with a removable source as destination.
 - 11-09-2006 fixed: Get Thumb function in Music and Video Info didn't cache the "No thumb" item, so it was reverted next time you opened the dialog.
 - 11-09-2006 fixed: Thumbnail generation from a surface (eg xbe thumbs) ignored transparency.
 - 11-09-2006 fixed: [ 1555714 ] Thumbnails weren't displayed off the playlists item in Library view.
 - 11-09-2006 fixed: [ 1555436 ] partymode ---> open a playlist failed on single stream "playlists"
 - 11-09-2006 fixed: Slow queuing of library folders (such as a Genre folder) due to recursive database lookups.  "Solved" by just queuing the "all" item under each category.  Sort order will be the same as if you queue the "All" item under the category.
 - 11-09-2006 fixed: [ 1555716 ] system.profilethumb not displayed
 - 11-09-2006 fixed: led on playback control was broken
 - 10-09-2006 fixed: smartxx pwm control memory leak
 - 10-09-2006 added: Disable all logging through <loglevel>-1</loglevel>
 - 10-09-2006 fixed: system information used 390k memory all the time (even when not on screen).
 - 10-09-2006 updated: Dutch language file (Thnx to MrNice)
 - 10-09-2006 updated: Polish language file (Thnx to smuto)
 - 10-09-2006 updated: Italian language file (Thnx to kotix)
 - 10-09-2006 updated: Norwegian language file (Thnx to vnm)
 - 10-09-2006 updated: French language file (Thnx to zeewul)
 - 10-09-2006 fixed: paplayer doesn't set its internal state to resume when skipping to next track when paused