@@ -1298,14 +1298,10 @@ void CGUIWindowMusicBase::OnPopupMenu(int iItem)
   {
     if (m_vecItems.m_strPath.Equals(g_guiSettings.GetString("system.playlistspath")) || g_guiSettings.GetBool("filelists.allowfiledeletion"))
     {
-      btn_Delete = pMenu->AddButton(117);
-      btn_Rename = pMenu->AddButton(118);
-
-      // disable these functions if not supported by the protocol
-      if (m_vecItems[iItem]->IsReadOnly())
-      {
-        pMenu->EnableButton(btn_Delete, false);
-        pMenu->EnableButton(btn_Rename, false);
+      if (!m_vecItems[iItem]->IsReadOnly())
+      { // enable only if writeable
+        btn_Delete = pMenu->AddButton(117);
+        btn_Rename = pMenu->AddButton(118);
       }
     }
   }
